--- a/templates/base.html
+++ b/templates/base.html
@@ -87,8 +87,8 @@
             <div id="examples">
                 <p>
                     <b>Random featured person:</b>
-                    <a href="{{ personURL }}">{{ person.name }}</a>
-                    , who was born on {{ person.birthdate }}.
+                    <a href="{{ personURL }}">{{ person.name }}</a>,
+                    who was born on {{ person.birthdate }}.
                 </p>
                 <p>
                     <b>Random featured movie:</b>
